# py-rmdup

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
rmdup/: cli.py  core.py
